--- a/resources/style.css
+++ b/resources/style.css
@@ -45,4 +45,21 @@ padding:5px;
     float: right;
 
 }
-
+/* Added today 3march 9 05*/
+.job-head{
+    font-weight: 700;
+    font-size: 16px;
+    /*font-size : 1.6rem; */
+    color: rgb(40, 44, 63);
+    line-height: 2rem;
+    font-family: Lato, Roboto, sans-serif;
+}
+.job-content{
+    font-family: Lato, Roboto, sans-serif;
+    font-weight: 400;
+    line-height: 2rem;
+    color: rgb(83, 86, 101);
+    /*font-size: 1.3rem*/;
+    font-size: 13px;
+    
+}
