--- a/resources/homestyle.css
+++ b/resources/homestyle.css
@@ -31,3 +31,17 @@ img{
 .my-modal::backdrop{
     background: rgb(0 0 0 /.5);
 }
+
+
+#popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #000;
+    z-index: 9999;
+  }
