--- a/resources/oldstyle.css
+++ b/resources/oldstyle.css
@@ -1,6 +1,7 @@
 body{
 
     background-color: rgb(245, 205, 104);
+    background-image: linear-gradient(135deg, #71b7e6, #9b59b6);
     
     overflow-x: hidden; /*useful check later */
     /*edit if causing problems*/ /*below from form tuto*/
@@ -9,9 +10,7 @@ body{
     /*justify-content: center;*/
     min-height: 100vh;
 }
-.chumma .container{
-    background-color: yellowgreen;
-}
+/* Removed a unnecessary .chumma .container which was here */
 .my-container{
     /*display: flex;*/
     align-items: center;
@@ -59,7 +58,8 @@ body{
     transition: margin-left 0.3s ease-in-out;
 }
 .my-form-outer form .my-page .my-title{
-    text-align: left;
+    margin-top: 2rem;
+    text-align: center;
     font-size: 25px;
     font-weight: 500;
 }
@@ -69,6 +69,10 @@ body{
     margin: 45px 0;
     display: flex;
     position: relative;
+    margin-top: 45px;
+    margin-bottom: 45px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .my-form-outer form .my-page .my-field .my-label{
    position: absolute;
@@ -214,4 +218,8 @@ form .my-page .my-btns button.my-next{
 /*comments
 1. changed progress bar max-wwidth set to 330px and margin : auto
 2. changed form width to 50 % and centered using margin : auto
+3. centered field items by using margin props
+4. changed background color since udei was asking
+5. removed unnecessary .chumma styling in oldstyles.css
+6.changed my-title props - center and margin top
 */
