--- a/resources/style.css
+++ b/resources/style.css
@@ -135,3 +135,54 @@ padding:5px;
 .space-above{
     margin-top: 0.5rem;
 }
+/*for jobs4.html*/
+.jobs4-center-div{
+    min-height: 100vh;
+    width: 330px;
+    background: #fff;
+    border-radius: 5px;
+    text-align: left;
+    padding: 50px 35px 10px 35px;
+    box-sizing: content-box;
+    margin: auto;
+    min-width: 50%;
+}
+.job4-mini{
+    border-radius: 5px;
+    border-left: 3px solid;
+    padding: 10px;
+    border-color: rgb(225, 172, 25);
+    background-color: lightgoldenrodyellow;
+    margin-bottom: 1rem;
+}
+.container-lg button{
+    display: block;
+    
+}
+/*viewprofile.html*/
+.view-profile-center-div{
+    margin-top: 100px;
+    border-radius: 5px;
+    background-color: whitesmoke; 
+    width: 66.66%;
+    padding: 2rem;
+}
+.view-profile-center-div h1{
+    text-align: center;
+    margin-bottom: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.view-profile-center-div hr{
+    color: darkgoldenrod;
+}
+.view-profile-center-div .profile-mini{
+    border-radius: 5px;
+    border: 2px solid;
+    padding: 10px;
+    border-color: rgb(225, 172, 25);
+    background-color: lightgoldenrodyellow;
+    margin-bottom: 1rem;
+}
+.view-profile-center-div .profile-mini h2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
