--- a/resources/style.css
+++ b/resources/style.css
@@ -350,3 +350,106 @@ padding:5px;
     font-weight: 500;
     margin-top: 5px;
 }
+
+/*Resume builder*/
+      /* Set the body to use flexbox */
+      .resume-main {
+        margin-top: 100px;
+        border-radius: 2px;
+        border: 2px solid;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        background-color: transparent;
+        height: 100vh; /* set the height to the full viewport height */
+      }
+
+      /* Set the left container to be one-fourth the width */
+      .resume-main .left {
+        flex-basis: 25%;
+        background-color: lightblue;
+        display: grid;
+        grid-template-rows: 30% 25% 1fr 1fr ;
+        padding: 10px;
+      }
+      .resume-main .left .left-mini{
+        width: 100%;
+        min-height: 100px;
+        margin-bottom: 10px;
+        background-color: whitesmoke;
+        padding: 10px;
+      }
+      .resume-main .left .left-mini h2{
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
+      }
+      .my-profile-pic {
+        border-radius: 10%;
+        overflow: hidden;
+        border: 3px solid gray;
+      }
+      #profile-left-mini{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      /* Style the profile picture image */
+      .profile-pic img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      
+      .resume-skills{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
+
+      }
+      .skill-tablet{
+        font-size: 18px;
+        padding: 10px 20px;
+        margin: 5px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 500;
+        
+      }
+
+
+      /* Set the right container to be three-fourths the width */
+      .resume-main .right {
+        flex-basis: 75%;
+        background-color: lightgray;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        gap: 1rem;
+      }
+      .resume-main .right .right-mini{
+        width: 100%;
+        height: auto;
+        min-height: 300px;
+        margin-bottom: 10px;
+        background-color: white;
+        border-radius: 5px;
+        padding: 10px;
+      }
+      .resume-main .right .right-mini .right-name{
+        font-size: 32px;
+        font-weight: 500;
+      }
+      .resume-main .right .right-mini .right-role{
+        font-size: large;
+      }
+      .resume-main .right .right-mini .proj-title{
+        font-size: 24px;
+        font-weight: 500;
+      }
+      .resume-main .right .right-mini .proj-desc{
+        font-size: large;
+        
+      }
