--- a/resources/style.css
+++ b/resources/style.css
@@ -429,7 +429,7 @@ padding:5px;
         padding: 10px;
         gap: 1rem;
       }
-      .resume-main .right .right-mini{
+      .resume-main .right .right-rows{
         width: 100%;
         height: auto;
         min-height: 300px;
@@ -438,19 +438,89 @@ padding:5px;
         border-radius: 5px;
         padding: 10px;
       }
-      .resume-main .right .right-mini .right-name{
+      .resume-main .right .right-rows .right-name{
         font-size: 32px;
         font-weight: 500;
       }
-      .resume-main .right .right-mini .right-role{
+      .resume-main .right .right-rows .right-role{
         font-size: large;
       }
-      .resume-main .right .right-mini .proj-title{
-        font-size: 24px;
+      .resume-main .right .right-rows .proj-name{
+        font-size: 18px;
         font-weight: 500;
       }
-      .resume-main .right .right-mini .proj-desc{
+      .resume-main .right .right-rows .proj-desc{
         font-size: large;
         
       }
 /* after 5 april*/
+/* For TPO Dash*/
+.hiring-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 66.66%;
+    margin: auto;
+  }
+  
+  .hiring-container .hiring-card {
+    position: relative;
+    width: 300px;
+    height: 150px;
+    margin: 0 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  .hiring-card:hover .hiring-card-frame {
+    transform: translateX(-100%);
+  }
+  
+  .hiring-card-text {
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+  }
+  
+  .hiring-card-frame {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: translateX(0);
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .hiring-card-button {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background-color: #008CBA;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
+  }
+  
+  .hiring-card:hover .hiring-card-button {
+    opacity: 1;
+    
+  }
+  .hiring-main{
+    border-radius: 5px;
+    border: solid 2px;
+    background-image: linear-gradient(135deg, #71b7e6, #9b59b6);;
+  }
