--- a/resources/style.css
+++ b/resources/style.css
@@ -382,6 +382,7 @@ padding:5px;
       .resume-main .left .left-mini h2{
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: 600;
+        display: inline; /*change if causing error*/
       }
       .my-profile-pic {
         border-radius: 10%;
@@ -409,6 +410,14 @@ padding:5px;
         justify-content: center;
         max-width: 100%;
 
+      }
+      .resume-interest{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
       }
       .skill-tablet{
         font-size: 18px;
@@ -453,6 +462,8 @@ padding:5px;
         font-size: large;
         
       }
+    /*for print media query*/
+    
 /* after 5 april*/
 /* For TPO Dash*/
 .hiring-container {
